@@ -1,14 +1,16 @@
 package com.codeit.deokhugam.service;
 
-import com.codeit.deokhugam.common.exception.AuthorizationException;
-import com.codeit.deokhugam.common.exception.ResourceNotFoundException;
+import com.codeit.deokhugam.common.exception.handler.CustomException;
+import com.codeit.deokhugam.common.exception.handler.ErrorCode;
 import com.codeit.deokhugam.domain.entity.Comment;
 import com.codeit.deokhugam.domain.entity.Member;
 import com.codeit.deokhugam.domain.entity.Review;
 import com.codeit.deokhugam.dto.command.comment.CommentCreateCommand;
+import com.codeit.deokhugam.dto.command.comment.CommentUpdateCommand;
 import com.codeit.deokhugam.dto.command.comment.CursorPageCommentCommand;
 import com.codeit.deokhugam.dto.response.comment.CommentResponse;
 import com.codeit.deokhugam.dto.result.comment.CommentCreateResult;
+import com.codeit.deokhugam.dto.result.comment.CommentUpdateResult;
 import com.codeit.deokhugam.dto.result.comment.CursorPageCommentResult;
 import com.codeit.deokhugam.mapper.CommentMapper;
 import com.codeit.deokhugam.repository.CommentRepository;
@@ -16,6 +18,7 @@ import com.codeit.deokhugam.repository.MemberRepository;
 import com.codeit.deokhugam.repository.ReviewRepository;
 import java.time.Instant;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -36,17 +39,18 @@ public class CommentService {
   public CommentCreateResult createComment(CommentCreateCommand command, Long requestMemberId) {
 
     // 인가(Authorization) 검증: 요청자(헤더)와 작성자(Command)가 일치하는지 확인
+    // 403 커스텀 예외
     if (!requestMemberId.equals(command.memberId())) {
-      throw new AuthorizationException("댓글 작성 권한이 없습니다.");
+      throw new CustomException(ErrorCode.COMMENT_NOT_AUTHORIZED);
     }
 
     // 리뷰 조회 없으면 404 커스텀 예외
     Review review = reviewRepository.findById(command.reviewId())
-        .orElseThrow(() -> new ResourceNotFoundException("Review", command.reviewId()));
+        .orElseThrow(() -> new CustomException(ErrorCode.COMMENT_REVIEW_NOT_FOUND));
 
     // 멤버 조회 없으면 404 커스텀 예외
     Member member = memberRepository.findById(command.memberId())
-        .orElseThrow(() -> new ResourceNotFoundException("Member", command.memberId()));
+        .orElseThrow(() -> new CustomException(ErrorCode.COMMENT_USER_NOT_FOUND));
 
     //mapper에 있는 entity로 매핑해주는 메서드를 사용해서 entity로 변환
     Comment comment = commentMapper.toComment(command, review, member);
@@ -77,11 +81,11 @@ public class CommentService {
 
     if (!reviewRepository.existsById(reviewId)) {
       // 존재하지 않는 리뷰 ID로 조회 시 404 예외 발생
-      throw new ResourceNotFoundException("Review", reviewId);
+      throw new CustomException(ErrorCode.COMMENT_REVIEW_NOT_FOUND);
     }
 
     //Repository에서 limit+1개 조회
-    List<Comment> commentList = commentRepository.findByCommentReviewIdWithCursor(
+    List<Comment> commentList = commentRepository.findByReviewId(
         command.reviewId(),
         command.direction(),
         command.after(),    // 보조 커서 (createdAt)
@@ -108,7 +112,7 @@ public class CommentService {
     // List<Comment> -> List<CommentResponse> 변환
     List<CommentResponse> commentListResponse = commentListAfter.stream()
         .map(commentMapper::toCommentListResponse)
-        .toList();
+        .collect(Collectors.toList());
 
     // Result 객체 생성 후 반환
     return new CursorPageCommentResult(
@@ -119,6 +123,37 @@ public class CommentService {
         0L,
         hasNext
     );
+  }
+
+  // 댓글 상세 조회
+  @Transactional(readOnly = true)
+  public CommentResponse findCommentById(Long commentId) {
+
+    // commendID로 댓글 조회 (없으면 404 예외)
+    Comment comment = commentRepository.findById(commentId)
+        .orElseThrow(() -> new CustomException(ErrorCode.COMMENT_NOT_FOUND));
+
+    //Entity -> Response DTO 변환
+    return commentMapper.toCommentListResponse(comment);
+  }
+  
+  // 댓글 수정
+  @Transactional
+  public CommentUpdateResult updateComment(CommentUpdateCommand command) {
+    
+    // 수정할 댓글을 commentId로 조회 (404)
+    Comment comment = commentRepository.findById(command.commentId())
+        .orElseThrow(() -> new CustomException(ErrorCode.COMMENT_NOT_FOUND));
+    
+    // 요청자 Id와 댓글 작성자 Id 일치 검증 (403)
+    if(!comment.getMember().getId().equals(command.requestMemberId())) {
+      throw new CustomException(ErrorCode.COMMENT_NOT_AUTHORIZED);
+    }
+    
+    // mapper를 사용해 엔티티 내용 업데이트
+    comment.updateComment(command.content());
+
+    return commentMapper.toCommentUpdateResult(comment);
   }
 
 }
